<resources>
    <string name="sport_name">sport module</string>
    <string name="sport_sport_last">Recent Sport</string>
    <string name="sport_sport_time">Time</string>
    <string name="sport_sport_calorie">Calories</string>
    <string name="sport_sport_distance">Distance</string>
    <string name="sport_steps">Steps</string>
    <string name="sport_speed_hour">Speed</string>
    <string name="sport_stride">Stride</string>
    <string name="sport_heart">Heart</string>
    <string name="sport_height">Altitude</string>
    <string name="sport_sport_info">Sport Info</string>
    <string name="sport_heart_level">Heart Rate Level</string>
    <string name="sport_heart1">Limit(≥161)</string>
    <string name="sport_heart2">Anaerobic(149~160)</string>
    <string name="sport_heart3">Aerobic(131~138)</string>
    <string name="sport_heart4">Fat Burn(112~130)</string>
    <string name="sport_heart5">Warm Up(90~111)</string>
    <string name="sport_running">Running</string>
    <string name="sport_run_pause">Running has been suspended</string>
    <string name="sport_speed">Speed</string>
    <string name="sport_gps_low">GPS signal is weak and data accuracy is low</string>
    <string name="sport_gps_middle">GPS signal is strong and data accuracy is high</string>
    <string name="sport_gps_high">Strong GPS signal and high data accuracy</string>
    <string name="sport_no_sport">No sport records yet, so start sporting</string>
    <string name="sport_destroy">Click again to exit this campaign</string>
    <string name="sport_time_short">Exercise duration and distance are too short to generate effective exercise reports</string>
    <string name="sport_finish_sport">Are you sure you want to stop exercising?</string>
    <string name="sport_start_sport">Please start the exercise first</string>
</resources>
